# genai4devs

./: .env.example  README.md  app.yaml  main.py  pyproject.toml  server.py
data/: genAI for Developers.pptx  lstm_model.h5  ohlcv.csv  scaler.pkl
db/: chroma.sqlite3
src/ai/crews/wpcomparison_crew/: agents.py  crew.py  tasks.py
src/ai/crews/wpinvestment_crew/: agents.py  crew.py  tasks.py
src/ai/crews/wpmarket_crew/: agents.py  crew.py  tasks.py
src/ai/crews/wpmonitoring_crew/: agents.py  crew.py  tasks.py
src/ai/ml/: wplstm.py
src/ai/tools/: gv_rag_tools.py  monitoring_rag.py
src/docs/genAI4Devs/: 1_monitoring_performance.txt  2_monitoring_exec_summary.txt  Bennelong Emerging Companies Fund_Prophet.txt  Bennelong Emerging Companies Fund_recommendation.txt  Investors Mutual WS Aus Smaller Co_Bennelong Emerging Companies Fund_comparison.txt  Investors Mutual WS Aus Smaller Co_ES.txt  Investors Mutual WS Aus Smaller Co_Prophet.txt  Investors Mutual WS Aus Smaller Co_recommendation.txt  Market_conditions.txt
src/models/: model.py
src/repository/: 1_monitoring_performance.txt  2_monitoring_exec_summary.txt
src/services/: api_routes.py  evaluate_spans.py  service.py  utilities.py
src/ui/: gui.py
